<resources>
    <string name="app_name">Contact Manager</string>

    <string name="action_settings">Settings</string>
    <string name="contact_details">Contact Details</string>
    <string name="new_contact">New Contact</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_email">Email Address</string>
    <string name="btn_save">SAVE</string>

    <string name="sent_mail">Send mail</string>

    <string name="error_internet">Please connect to internet</string>
    <string name="error_api_failed">Not able to connect to server</string>
    <string name="error_image_upload">Image upload failed</string>

    <string name="prgs_update_contact">Updating contact details...</string>
    <string name="error_first_name">First Name not valid</string>
    <string name="error_phone">Mobile Phone Number not valid</string>

</resources>
