<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nikhil.contactmanager.mvp.view.NewContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/default_profile" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivProfile"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/hint_first_name" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etFirstName"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/hint_last_name" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etLastName"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPhone"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etEmail"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@color/colorAccent"
                android:elevation="3dp"
                android:text="@string/btn_save"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
